packages/itwinui-css/src/side-navigation/side-navigation.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@import '../utils/index';
@import '../text/mixins';

$iui-side-navigation-icon-margins: calc(1.5 * var(--iui-size-m));

@mixin iui-side-navigation {
  display: inline-flex;
  flex: 0 0 auto;
  flex-direction: column;
  height: 100%;
  background-color: var(--iui-color-background-3);
  border-right: 1px solid var(--iui-color-background-border);
  @media (prefers-reduced-motion: no-preference) {
    transition: max-width var(--iui-duration-1) ease-out;
  }

  > .iui-sidenav-content {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    width: 100%;

    > .iui-top,
    > .iui-bottom {
      flex-grow: 1;
      display: flex;
      flex-direction: column;
    }

    > .iui-top {
      .iui-sidenav-button:first-of-type {
        border-top: none;
      }

      .iui-sidenav-button:not(:last-of-type) {
        border-bottom: none;
      }
    }

    > .iui-bottom {
      justify-content: flex-end;

      .iui-sidenav-button {
        border-bottom: none;
      }
    }

    + .iui-sidenav-button.iui-expand {
      border: none;
      border-top: 1px solid var(--iui-color-background-border);
    }
  }

  &.iui-collapsed {
    box-sizing: content-box;

    $icon-large: map-get($iui-icon-sizes, l);

    min-width: calc($icon-large + $iui-side-navigation-icon-margins * 2);
    max-width: calc($icon-large + $iui-side-navigation-icon-margins * 2);

    // iPhone notch support
    @supports (min-width: unquote('max(0px)')) {
      min-width: unquote(
        'max(#{$icon-large} + #{$iui-side-navigation-icon-margins} * 2, #{$icon-large} + #{$iui-side-navigation-icon-margins} * 2 + env(safe-area-inset-left))'
      );
      max-width: unquote(
        'max(#{$icon-large} + #{$iui-side-navigation-icon-margins} * 2, #{$icon-large} + #{$iui-side-navigation-icon-margins} * 2 + env(safe-area-inset-left))'
      );
    }
  }

  &.iui-expanded,
  > .iui-sidenav-content {
    max-width: calc(var(--iui-size-3xl) * 3);

    > .iui-sidenav-button.iui-expand > .iui-button-icon {
      transform: scaleX(-1);
    }
  }

  .iui-sidenav-button {
    gap: $iui-side-navigation-icon-margins;
    border-radius: 0;
    border-left: none;
    border-right: none;
    overflow: hidden;
    justify-content: flex-start;

    // Adds stripe to the right of active button
    --_iui-button-active-stripe-inset: 0 0 0 calc(100% - #{var(--iui-size-3xs)});

    &:not(.iui-expand) {
      height: calc(var(--iui-size-s) * 5);
      // iPhone notch support
      @supports (padding: unquote('max(0px)')) {
        padding-left: unquote(
          'max(#{$iui-side-navigation-icon-margins}, #{$iui-side-navigation-icon-margins} + env(safe-area-inset-left))'
        );
      }
    }

    > span.iui-button-label {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    &,
    &:hover,
    &[disabled] {
      border-color: var(--iui-color-background-border);
    }

    .iui-button-icon svg:not(.iui-avatar) {
      @include iui-icon-style('l');
    }

    &.iui-submenu-open .iui-button-icon {
      fill: var(--iui-color-foreground-primary);
    }

    &[disabled],
    &:disabled {
      background-color: var(--iui-color-background-2);
    }

    &.iui-expand {
      --_iui-button-padding-block: 0;
      --_iui-button-min-height: var(--iui-size-l);
      justify-content: center;
      border: none;
      border-bottom: 1px solid var(--iui-color-background-border);

      > .iui-button-icon {
        @include iui-icon-style('s');
        @include iui-icon-color;
        @media (prefers-reduced-motion: no-preference) {
          transition: transform var(--iui-duration-2) ease-out;
        }
      }
    }
  }
}

@mixin iui-side-navigation-submenu {
  min-width: calc(var(--iui-size-3xl) * 2);
  max-width: 50vw;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  overflow-y: overlay;
  resize: horizontal;
  background-color: var(--iui-color-background-1);
  border-right: 1px solid var(--iui-color-background-border);

  @include iui-transition-group;

  &.iui-enter-active,
  &.iui-exit-active {
    display: flex;
  }

  &-content {
    padding: 0 var(--iui-size-s) var(--iui-size-s);
    flex-shrink: 0;
  }

  &-header {
    height: calc(var(--iui-size-s) * 5);
    display: flex;
    align-items: center;
    justify-content: space-between;

    &-label {
      @include iui-text(title);
      display: flex;
      align-items: center;
      overflow: hidden;

      .iui-button {
        flex-shrink: 0;
      }

      > * {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }

    &-actions {
      flex-shrink: 0;
      margin-left: var(--iui-size-xs);
    }
  }
}

@mixin iui-side-navigation-wrapper {
  display: flex;
  position: relative;
  height: 100%;
}

